<resources>
    <string name="app_name">Mappis</string>
    <string name="create_map">Create map</string>
    <string name="map_name">Map Name</string>
    <string name="map_description">Map description</string>
    <string name="settings">Settings</string>
    <string name="insert_map_name">Insert map name</string>
    <string name="insert_short_description">Insert short description</string>
    <string name="create_new_map">Create new map</string>
    <string name="your_maps">Your maps</string>
    <string name="my_location_button">My location button</string>
    <string name="choose_map_style">Choose map style</string>
    <string name="map_details">Map details</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="add">Add</string>
    <string name="app_logo">app_logo</string>
    <string name="button_for_location_set">Button for location set</string>
    <string name="clickable_image_for_map_loading">Clickable image for map loading</string>
    <string name="button_for_map_saving">Button for map saving</string>
    <string name="button_for_tracking_color_choose">Button for tracking color choose</string>
    <string name="button_for_marker_add_choose">Button for marker add choose</string>
    <string name="button_for_marker_with_text_add_choose">Button for marker with text add choose</string>
    <string name="button_to_play_or_pause_the_tracking">Button to play or pause the tracking</string>
    <string name="image_of_the_map_in_the_card">Image of the map in the card</string>
    <string name="data">Data</string>
    <string name="comment">Comment</string>
    <string name="delete_map">DELETE MAP</string>
    <string name="insert_your_marker_text">Insert your marker text</string>
    <string name="map_statistics">Map Statistics</string>
    <string name="map_name_stat">Map name:</string>
    <string name="nan">NaN</string>
    <string name="map_type_stat">Map type:</string>
</resources>